--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -110,7 +110,7 @@ a {
 
 .icon-button {
   background-color: white;
-  border-radius: 3.6rem;
+  border-radius: 3.6rem !important;
   cursor: pointer;
   display: inline-block;
   font-size: 2rem;
