--- a/css/styles.css
+++ b/css/styles.css
@@ -3528,7 +3528,7 @@ button.dropdown-item {
 
 .navbar {
   background-color: white;
-  min-height: 5rem;
+  min-height: 5.5rem;
   position: relative;
   z-index: 30; }
   .navbar.is-white {
@@ -3984,7 +3984,7 @@ button.dropdown-item {
   .navbar > .container {
     align-items: stretch;
     display: flex;
-    min-height: 5rem;
+    min-height: 5.5rem;
     width: 100%; }
   .navbar.has-shadow {
     box-shadow: 0 2px 0 0 whitesmoke; }
@@ -4002,18 +4002,18 @@ button.dropdown-item {
 
 html.has-navbar-fixed-top,
 body.has-navbar-fixed-top {
-  padding-top: 5rem; }
+  padding-top: 5.5rem; }
 
 html.has-navbar-fixed-bottom,
 body.has-navbar-fixed-bottom {
-  padding-bottom: 5rem; }
+  padding-bottom: 5.5rem; }
 
 .navbar-brand,
 .navbar-tabs {
   align-items: stretch;
   display: flex;
   flex-shrink: 0;
-  min-height: 5rem; }
+  min-height: 5.5rem; }
 
 .navbar-brand a.navbar-item:focus, .navbar-brand a.navbar-item:hover {
   background-color: transparent; }
@@ -4028,9 +4028,9 @@ body.has-navbar-fixed-bottom {
   color: #666482;
   cursor: pointer;
   display: block;
-  height: 5rem;
+  height: 5.5rem;
   position: relative;
-  width: 5rem;
+  width: 5.5rem;
   margin-left: auto; }
   .navbar-burger span {
     background-color: currentColor;
@@ -4088,7 +4088,7 @@ a.navbar-item,
   flex-grow: 0;
   flex-shrink: 0; }
   .navbar-item img {
-    max-height: 4rem; }
+    max-height: 2.5rem; }
   .navbar-item.has-dropdown {
     padding: 0; }
   .navbar-item.is-expanded {
@@ -4096,7 +4096,7 @@ a.navbar-item,
     flex-shrink: 1; }
   .navbar-item.is-tab {
     border-bottom: 1px solid transparent;
-    min-height: 5rem;
+    min-height: 5.5rem;
     padding-bottom: calc(0.5rem - 1px); }
     .navbar-item.is-tab:focus, .navbar-item.is-tab:hover {
       background-color: transparent;
@@ -4163,14 +4163,14 @@ a.navbar-item,
     top: 0; }
   .navbar.is-fixed-top .navbar-menu, .navbar.is-fixed-top-touch .navbar-menu {
     -webkit-overflow-scrolling: touch;
-    max-height: calc(100vh - 5rem);
+    max-height: calc(100vh - 5.5rem);
     overflow: auto; }
   html.has-navbar-fixed-top-touch,
   body.has-navbar-fixed-top-touch {
-    padding-top: 5rem; }
+    padding-top: 5.5rem; }
   html.has-navbar-fixed-bottom-touch,
   body.has-navbar-fixed-bottom-touch {
-    padding-bottom: 5rem; } }
+    padding-bottom: 5.5rem; } }
 
 @media screen and (min-width: 1024px) {
   .navbar,
@@ -4180,9 +4180,9 @@ a.navbar-item,
     align-items: stretch;
     display: flex; }
   .navbar {
-    min-height: 5rem; }
+    min-height: 5.5rem; }
     .navbar.is-spaced {
-      padding: 5rem 2rem; }
+      padding: 1rem 2rem; }
       .navbar.is-spaced .navbar-start,
       .navbar.is-spaced .navbar-end {
         align-items: center; }
@@ -4293,16 +4293,16 @@ a.navbar-item,
     top: 0; }
   html.has-navbar-fixed-top-desktop,
   body.has-navbar-fixed-top-desktop {
-    padding-top: 5rem; }
+    padding-top: 5.5rem; }
   html.has-navbar-fixed-bottom-desktop,
   body.has-navbar-fixed-bottom-desktop {
-    padding-bottom: 5rem; }
+    padding-bottom: 5.5rem; }
   html.has-spaced-navbar-fixed-top,
   body.has-spaced-navbar-fixed-top {
-    padding-top: 15rem; }
+    padding-top: 7.5rem; }
   html.has-spaced-navbar-fixed-bottom,
   body.has-spaced-navbar-fixed-bottom {
-    padding-bottom: 15rem; }
+    padding-bottom: 7.5rem; }
   a.navbar-item.is-active,
   .navbar-link.is-active {
     color: #0a0a0a; }
@@ -4313,7 +4313,7 @@ a.navbar-item,
     background-color: #fafafa; } }
 
 .hero.is-fullheight-with-navbar {
-  min-height: calc(100vh - 5rem); }
+  min-height: calc(100vh - 5.5rem); }
 
 .pagination {
   font-size: 1rem;
@@ -7847,6 +7847,11 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 .footer {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem; }
+
+nav {
+  margin-left: 3rem;
+  margin-right: 3rem;
+  border-bottom: 1px solid #b7b6c6; }
 
 .floating {
   top: -1rem;
