--- a/css/styles.css
+++ b/css/styles.css
@@ -7851,7 +7851,8 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 nav {
   backdrop-filter: saturate(180%) blur(5px);
   padding-left: 5.5rem;
-  padding-right: 5.5rem; }
+  padding-right: 5.5rem;
+  box-shadow: inset 0 -1px 0 0 rgba(255, 255, 255, 0.1); }
 
 .floating {
   top: -1rem;
