--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -36,6 +36,7 @@ nav {
   backdrop-filter: saturate(180%) blur(5px);
   padding-left: 5.5rem;
   padding-right: 5.5rem;
+  box-shadow: inset 0 -1px 0 0 hsla(0, 0%, 100%, 0.1);
 }
 
 .floating {
