--- a/css/styles.css
+++ b/css/styles.css
@@ -2102,7 +2102,7 @@ a.tag:hover {
   .title.is-1 {
     font-size: 4.75rem; }
   .title.is-2 {
-    font-size: 2.5rem; }
+    font-size: 4rem; }
   .title.is-3 {
     font-size: 2rem; }
   .title.is-4 {
@@ -2127,7 +2127,7 @@ a.tag:hover {
   .subtitle.is-1 {
     font-size: 4.75rem; }
   .subtitle.is-2 {
-    font-size: 2.5rem; }
+    font-size: 4rem; }
   .subtitle.is-3 {
     font-size: 2rem; }
   .subtitle.is-4 {
@@ -6716,7 +6716,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   font-size: 4.75rem !important; }
 
 .is-size-2 {
-  font-size: 2.5rem !important; }
+  font-size: 4rem !important; }
 
 .is-size-3 {
   font-size: 2rem !important; }
@@ -6737,7 +6737,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   .is-size-1-mobile {
     font-size: 4.75rem !important; }
   .is-size-2-mobile {
-    font-size: 2.5rem !important; }
+    font-size: 4rem !important; }
   .is-size-3-mobile {
     font-size: 2rem !important; }
   .is-size-4-mobile {
@@ -6753,7 +6753,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   .is-size-1-tablet {
     font-size: 4.75rem !important; }
   .is-size-2-tablet {
-    font-size: 2.5rem !important; }
+    font-size: 4rem !important; }
   .is-size-3-tablet {
     font-size: 2rem !important; }
   .is-size-4-tablet {
@@ -6769,7 +6769,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   .is-size-1-touch {
     font-size: 4.75rem !important; }
   .is-size-2-touch {
-    font-size: 2.5rem !important; }
+    font-size: 4rem !important; }
   .is-size-3-touch {
     font-size: 2rem !important; }
   .is-size-4-touch {
@@ -6785,7 +6785,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   .is-size-1-desktop {
     font-size: 4.75rem !important; }
   .is-size-2-desktop {
-    font-size: 2.5rem !important; }
+    font-size: 4rem !important; }
   .is-size-3-desktop {
     font-size: 2rem !important; }
   .is-size-4-desktop {
@@ -6801,7 +6801,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   .is-size-1-widescreen {
     font-size: 4.75rem !important; }
   .is-size-2-widescreen {
-    font-size: 2.5rem !important; }
+    font-size: 4rem !important; }
   .is-size-3-widescreen {
     font-size: 2rem !important; }
   .is-size-4-widescreen {
@@ -6817,7 +6817,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   .is-size-1-fullhd {
     font-size: 4.75rem !important; }
   .is-size-2-fullhd {
-    font-size: 2.5rem !important; }
+    font-size: 4rem !important; }
   .is-size-3-fullhd {
     font-size: 2rem !important; }
   .is-size-4-fullhd {
@@ -7853,6 +7853,9 @@ nav {
   padding-left: 5.5rem;
   padding-right: 5.5rem;
   box-shadow: inset 0 -1px 0 0 rgba(255, 255, 255, 0.1); }
+
+.squeezed {
+  letter-spacing: -0.04em; }
 
 .floating {
   top: -1rem;
