--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -22,6 +22,7 @@ $navbar-background-color: rgba(0, 0, 0, 0.5);
 $navbar-item-img-max-height: 2.5rem;
 
 $size-1: 4.75rem;
+$size-2: 4rem;
 $title-weight: bolder;
 $title-color: $black;
 // Update some of Bulma's component variables
@@ -37,6 +38,10 @@ nav {
   padding-left: 5.5rem;
   padding-right: 5.5rem;
   box-shadow: inset 0 -1px 0 0 hsla(0, 0%, 100%, 0.1);
+}
+
+.squeezed {
+  letter-spacing: -0.04em;
 }
 
 .floating {
