--- a/css/styles.css
+++ b/css/styles.css
@@ -7862,6 +7862,9 @@ nav {
   width: 40%;
   right: 0; }
 
+#glowCookies-banner > h3 {
+  font-weight: bolder; }
+
 @media screen and (max-width: 800px) {
   .bg-1 {
     background: url("../assets/images/data-catalog-bg.svg");
