--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -40,6 +40,16 @@ nav {
   box-shadow: inset 0 -1px 0 0 hsla(0, 0%, 100%, 0.1);
 }
 
+.level-right > .level-item > i {
+  padding: 8px;
+  margin-left: 1rem;
+}
+
+.divider {
+  height: 1px;
+  background-color: hsla(0, 0%, 100%, 0.1);
+}
+
 .squeezed {
   letter-spacing: -0.04em;
 }
@@ -125,105 +135,4 @@ a {
   img {
     width: 3em;
   }
-}
-
-.icon-button {
-  background-color: white;
-  border-radius: 3.6rem !important;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 2rem;
-  height: 3.6rem;
-  line-height: 3.6rem;
-  margin: 0 5px;
-  position: relative;
-  text-align: center;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  width: 3.6rem;
-}
-/* Circle */
-.icon-button span {
-  border-radius: 0;
-  display: block;
-  height: 0;
-  left: 50%;
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
-  width: 0;
-}
-
-.icon-button:hover span {
-  width: 3.6rem;
-  height: 3.6rem;
-  border-radius: 3.6rem;
-  margin: -1.8rem;
-}
-
-.twitter span {
-  background-color: #4099ff;
-}
-
-.linkedin span {
-  background-color: #0077b5;
-}
-
-.discord span {
-  background-color: #7289da;
-}
-
-.email span {
-  background-color: $primary;
-}
-
-.medium span {
-  background-color: #00ab6c;
-}
-/* Icons */
-.icon-button i {
-  background: none;
-  color: white;
-  height: 3.6rem;
-  left: 0;
-  line-height: 3.6rem;
-  position: absolute;
-  top: 0;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
-  width: 3.6rem;
-  z-index: 10;
-}
-
-.icon-button .fa-twitter {
-  color: #4099ff;
-}
-
-.icon-button .fa-linkedin {
-  color: #0077b5;
-}
-
-.icon-button .fa-discord {
-  color: #7289da;
-}
-
-.icon-button .fa-medium {
-  color: #00ab6c;
-}
-
-.icon-button .fa-envelope {
-  color: $primary;
-}
-
-.icon-button:hover .fab,
-.icon-button:hover .far {
-  color: white;
 }
