--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -143,10 +143,14 @@ a {
 }
 
 .features {
-  p {
-    max-width: 17rem;
-  }
-  img {
-    width: 3em;
+  .circle {
+    width: 4em;
+    height: 4em;
+    border-radius: 50%;
+    vertical-align: center;
+    background-color: #18181a;
+    justify-content: center;
+    align-items: center;
+    display: flex;
   }
 }
